--- a/note.html
+++ b/note.html
@@ -37,7 +37,7 @@
 		
         function addItem(){
 	   var addName=document.getElementById('addname').value;
-           if(addName=='')return;
+           if(addName==='')return;
            notes.push(addName);
            createNote(addName);
         }
