--- a/js_6/index.html
+++ b/js_6/index.html
@@ -23,7 +23,7 @@
 
   <script type="text/template" id="note-template">
       <%= content %> 
-      <button class="deleteButton">Remove</button>     
+      <button class="delete-button">Remove</button>     
   </script>
 
   <ul id="list"></ul>
